--- a/src/component/field/Field.sass
+++ b/src/component/field/Field.sass
@@ -10,7 +10,7 @@
 }
 
 .landscape {
-  composes: Form-field--small from '../../styles/components/Form.scss';
+  padding: #{4/$font-size}rem $spacing-sml #{4/$font-size}rem;
 }
 
 .invalid {
