Remove old class from Icon.scss

--- a/src/component/button/ButtonIcon.sass
+++ b/src/component/button/ButtonIcon.sass
@@ -29,11 +29,17 @@
 }
 
 .icon {
-  composes: Icon--form from '../../styles/components/Icon.scss';
   composes: Arrange-sizeFit u-pullLeft u-paddingRM from global;
 
-  svg path {
-    fill: $zd-color-monsoon;
+  svg {
+    min-width: #{16/$font-size}rem;
+    min-height: #{16/$font-size}rem;
+    height: #{16/$font-size}rem;
+    width: #{16/$font-size}rem;
+
+    path {
+      fill: $zd-color-monsoon;
+    }
   }
 
   [dir='rtl'] & {
