Remove some css variables that are only used in one place or have deceptive names

--- a/src/component/container/ScrollContainer.sass
+++ b/src/component/container/ScrollContainer.sass
@@ -14,8 +14,8 @@
 
 .header {
   composes: u-paddingVM u-paddingHL from global;
-  background: $form-cta-color;
-  border-bottom: $thin-border-size solid $header-stroke;
+  background: $zd-color-white-smoke;
+  border-bottom: $thin-border-size solid $zd-color-gainsboro;
   color: $zd-color-dark-gray;
 }
 
