--- a/src/component/helpCenter/HelpCenterResults.sass
+++ b/src/component/helpCenter/HelpCenterResults.sass
@@ -11,7 +11,7 @@
 }
 
 .item {
-  color: $list-color;
+  color: $zd-color-aluminum;
   list-style: decimal;
   font-size: #{13/$font-size}rem;
   margin-bottom: #{7/$font-size}rem;
