--- a/src/styles/components/UserContent.scss
+++ b/src/styles/components/UserContent.scss
@@ -59,7 +59,7 @@
   }
 
   blockquote {
-    border-left: #{4/$font-size}rem solid $icon-color;
+    border-left: #{4/$font-size}rem solid $zd-color-silver-sand;
     padding-left: #{20/$font-size}rem;
     font-style: italic;
   }
