--- a/src/styles/utils.scss
+++ b/src/styles/utils.scss
@@ -549,7 +549,7 @@ u-overflowAuto {
 }
 
 .u-borderError {
-  border-color: $error-border-color !important;
+  border-color: $error-color !important;
 }
 
 .u-zIndex1 {
