--- a/src/styles/components/Button.scss
+++ b/src/styles/components/Button.scss
@@ -43,7 +43,7 @@ $Button-nudge: 5;
 
   &:hover, &:active {
     svg {
-      fill: $icon-active-color;
+      fill: $zd-color-dark-gray;
     }
   }
 }
@@ -91,7 +91,7 @@ $Button-nudge: 5;
 
   &:hover, &:active {
     svg {
-      fill: $icon-active-color;
+      fill: $zd-color-dark-gray;
     }
   }
 
