--- a/src/styles/components/Icon.scss
+++ b/src/styles/components/Icon.scss
@@ -34,7 +34,7 @@
   }
 
   svg {
-    fill: $icon-inactive-color;
+    fill: $zd-color-aluminum;
     min-width: #{14/$font-size}rem; /* 1 */
     min-height: #{14/$font-size}rem; /* 1 */
     height: #{14/$font-size}rem;
@@ -78,7 +78,7 @@
   }
 
   svg {
-    fill: $icon-inactive-color;
+    fill: $zd-color-aluminum;
     min-width: #{10/$font-size}rem; /* 1 */
     min-height: #{10/$font-size}rem; /* 1 */
     height: #{10/$font-size}rem;
@@ -96,7 +96,7 @@
   }
 
   svg {
-    fill: $icon-inactive-color;
+    fill: $zd-color-aluminum;
     min-width: #{14/$font-size}rem; /* 1 */
     min-height: #{14/$font-size}rem; /* 1 */
     height: #{14/$font-size}rem;
@@ -109,7 +109,7 @@
   padding-right: 0 !important;
 
   svg {
-    fill: $icon-inactive-color;
+    fill: $zd-color-aluminum;
     min-width: #{8/$font-size}rem; /* 1 */
     min-height: #{8/$font-size}rem; /* 1 */
     height: #{8/$font-size}rem;
@@ -277,7 +277,7 @@
   margin-top: #{-18/$font-size}rem !important;
 
   svg {
-    fill: $icon-inactive-color;
+    fill: $zd-color-aluminum;
     min-width: #{7/$font-size}rem; /* 1 */
     min-height: #{7/$font-size}rem; /* 1 */
     height: #{7/$font-size}rem;
