Fix Icon styles being applied where they shouldn't be

--- a/src/component/Launcher.scss
+++ b/src/component/Launcher.scss
@@ -25,6 +25,7 @@ $Button-nudge: 5;
 }
 
 .icon {
+  composes: Icon from '../styles/components/Icon.scss';
   composes: Arrange-sizeFit u-textInheritColor u-inlineBlock from global;
   padding-right: #{8/$font-size}rem;
 
