--- a/src/styles/components/Icon.scss
+++ b/src/styles/components/Icon.scss
@@ -55,7 +55,9 @@
 
   svg {
     min-width: #{50/$font-size}rem; /* 1 */
+    min-height: #{30/$font-size}rem; /* 1 */
     width: #{50/$font-size}rem;
+    height: #{30/$font-size}rem;
 
     &:hover, &:active, &:focus {
       path {
