fix styles that relied on globals that shouldn't have

--- a/src/component/container/Container.scss
+++ b/src/component/container/Container.scss
@@ -12,7 +12,7 @@
 }
 
 .mobile {
-  composes: Container--fullscreen from global;
+  composes: Container--fullscreen from '../../styles/components/Container.scss';
 }
 
 .card {
