--- a/src/component/attachment/AttachmentList.scss
+++ b/src/component/attachment/AttachmentList.scss
@@ -1,13 +1,16 @@
 @import '../../styles/_vars.scss';
 
 .error {
-  composes: Error u-textError u-marginVS from global;
+  composes: u-textError u-marginVS from global;
+  composes: Error from '../../styles/components/Error.scss';
 }
 
 .container {
-  composes: Form-fieldContainer u-block u-marginTM u-marginBS from global;
+  composes: u-block u-marginTM u-marginBS from global;
+  composes: Form-fieldContainer from '../../styles/components/Form.scss';
 }
 
 .label {
-  composes: Form-fieldLabel u-textXHeight from global;
+  composes: u-textXHeight from global;
+  composes: Form-fieldLabel from '../../styles/components/Form.scss';
 }
