Fix channel choice styles on mobile

--- a/src/component/channelChoice/ChannelChoiceMenu.scss
+++ b/src/component/channelChoice/ChannelChoiceMenu.scss
@@ -28,7 +28,7 @@
 
   &:hover, &:focus, &:active {
     svg path {
-      fill: none;
+      fill: none !important;
       stroke: $zd-color-dark-gray;
     }
   }
