--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -23,6 +23,7 @@ $base-border-color: $zd-color-gainsboro;
 // Text colors
 $body-color: $zd-color-oil;
 $secondary-color: $zd-color-aluminum;
+$neutral-link-color: #007FAB;
 
 // Errors
 $error-color: $zd-color-flamingo;
