--- a/src/component/chat/ChatGroup.scss
+++ b/src/component/chat/ChatGroup.scss
@@ -16,6 +16,10 @@
 .messageUser {
   composes: u-pullRight from global;
   color: $zd-color-white;
+
+  [dir='rtl'] & {
+    float: left !important;
+  }
 }
 
 .userBackground {
@@ -25,6 +29,10 @@
 .messageAgent {
   composes: u-pullLeft from global;
   color: $zd-color-black;
+
+  [dir='rtl'] & {
+    float: right !important;
+  }
 }
 
 .agentBackground {
@@ -65,4 +73,9 @@
 
 .messageBubble {
   margin-left: #{40/$font-size}rem;
+
+  [dir='rtl'] & {
+    margin-left: 0;
+    margin-right: #{40/$font-size}rem;
+  }
 }
