Add rtl styles to the chat header and reorder feedback icons when rtl is true

--- a/src/component/chat/ChatHeader.scss
+++ b/src/component/chat/ChatHeader.scss
@@ -23,6 +23,11 @@
 .textContainer {
   composes: u-paddingLS from global;
   color: $zd-color-oil;
+
+  [dir='rtl'] & {
+    padding-left: 0 !important;
+    padding-right: #{10/$font-size}rem !important;
+  }
 }
 
 .title {
