--- a/src/component/chat/ChatPopup.scss
+++ b/src/component/chat/ChatPopup.scss
@@ -26,9 +26,19 @@
   composes: u-marginLL from global;
   composes: ctaButton;
   margin-right: #{12/$font-size}rem !important;
+
+  [dir='rtl'] & {
+    margin-right: #{20/$font-size}rem !important;
+    margin-left: #{12/$font-size}rem !important;
+  }
 }
 
 .rightCtaBtn {
   composes: u-marginRL from global;
   composes: ctaButton;
+
+  [dir='rtl'] & {
+    margin-right: 0 !important;
+    margin-left: #{20/$font-size}rem !important;
+  }
 }
