--- a/src/component/chat/ChatMenu.scss
+++ b/src/component/chat/ChatMenu.scss
@@ -35,6 +35,10 @@
     color: $zd-color-iron;
     background: $zd-color-white;
   }
+
+  [dir='rtl'] & {
+    text-align: right !important;
+  }
 }
 
 .itemLine {
@@ -55,5 +59,10 @@
     min-width: #{15/$font-size}rem;
     height: #{15/$font-size}rem;
     width: #{15/$font-size}rem;
+  }
+
+  [dir='rtl'] & {
+    padding-left: 0;
+    padding-right: #{6/$font-size}rem;
   }
 }
