Add a cursor pointer style to Talk pseudo link

--- a/src/component/talk/Talk.scss
+++ b/src/component/talk/Talk.scss
@@ -92,5 +92,5 @@
 }
 
 .offlineLink {
-  composes: u-textCenter u-userLinkColor from global;
+  composes: u-isActionable u-textCenter u-userLinkColor from global;
 }
