Update chat box height to match designs

--- a/src/component/chat/ChatBox.scss
+++ b/src/component/chat/ChatBox.scss
@@ -9,7 +9,7 @@
   composes: u-alignBottom from global;
 
   textarea { /* 1 */
-    height: #{33/$font-size}rem;
+    height: #{30/$font-size}rem !important;
 
     &::placeholder {
       color: $zd-color-gainsboro;
