--- a/src/component/chat/Chat.scss
+++ b/src/component/chat/Chat.scss
@@ -11,7 +11,6 @@
 
 .messages {
   margin-top: #{70/$font-size}rem;
-  margin-bottom: #{24/$font-size}rem;
 }
 
 .header {
@@ -19,7 +18,7 @@
 }
 
 .footer {
-  padding-bottom: #{8/$font-size}rem !important;
+  padding-top: 0 !important;
 }
 
 .chatEnd {
