--- a/src/component/chat/ChatFeedbackForm.scss
+++ b/src/component/chat/ChatFeedbackForm.scss
@@ -28,6 +28,11 @@
   border-radius: #{4/$font-size}rem;
   resize: none;
   outline: none;
+  border-color: $zd-color-gainsboro;
+
+  &::placeholder {
+    font-style: italic;
+  }
 }
 
 .feedbackDescription {
