--- a/src/component/chat/Chat.scss
+++ b/src/component/chat/Chat.scss
@@ -3,6 +3,10 @@
 .scrollContainerMobile {
   height: calc(100% - #{150/$font-size}rem);
   max-height: #{480/$font-size}rem;
+
+  .agentTyping {
+    bottom: #{94/$font-size}rem;
+  }
 }
 
 .container {
@@ -18,7 +22,7 @@
 }
 
 .footer {
-  padding-top: 0 !important;
+  padding-top: #{21/$font-size}rem !important;
   padding-bottom: #{4/$font-size}rem !important;
 }
 
@@ -37,7 +41,7 @@
 
 .agentTyping {
   composes: u-posAbsolute u-paddingTS from global;
-  bottom: #{103/$font-size}rem;
+  bottom: #{97/$font-size}rem;
   color: $zd-color-aluminum;
   width: #{301/$font-size}rem;
   background: linear-gradient(to bottom, rgba($zd-color-white, 0), rgba($zd-color-white, 0.8));
