--- a/src/styles/utils.scss
+++ b/src/styles/utils.scss
@@ -621,3 +621,7 @@ u-overflowAuto {
     display: none !important;
   }
 }
+
+.u-transitionBG {
+  transition: background-color .25s ease-in-out;
+}
