Add chat email transcript popup.

--- a/src/styles/components/Icon.scss
+++ b/src/styles/components/Icon.scss
@@ -346,3 +346,15 @@
     fill: $zd-color-iron;
   }
 }
+
+.Icon--error-fill {
+  path {
+    fill: $zd-color-flamingo
+  }
+}
+
+.Icon--checkmark-fill {
+  path {
+    fill: $zd-color-chateau-green
+  }
+}
