--- a/src/component/button/ButtonNav.scss
+++ b/src/component/button/ButtonNav.scss
@@ -17,8 +17,9 @@
 }
 
 .buttonNewDesign {
-  composes: u-posAbsolute u-posStart--vertFlush u-marginTS u-transitionBG u-userHeaderButtonColor from global;
+  composes: u-posAbsolute u-posStart--vertFlush u-marginTS u-userHeaderButtonColor from global;
   composes: Button from '../../styles/components/Button.scss';
+  composes: AnimColorEaseInOut from '../../styles/components/Animation.scss';
   margin-right: #{14/$font-size}rem !important;
   margin-left: #{14/$font-size}rem !important;
   padding: #{6/$font-size}rem !important;
