Extract screen types from transcript action types.

--- a/src/component/chat/ChatEmailTranscriptPopup.scss
+++ b/src/component/chat/ChatEmailTranscriptPopup.scss
@@ -1,48 +1,37 @@
+/**
+ * 1. Non standard for WebKit
+ */
+
 @import '../../styles/_vars.scss';
 
-$resultGridMinHeight: 20;
-
-:export {
-  resultGridMinHeight: $resultGridMinHeight;
-}
 .childrenContainer {
   composes: u-paddingTM u-paddingBT u-paddingHL from global;
 }
 
 .resultContainer {
-  padding: 20px;
-  width: 275px;
+  composes: u-paddingAL from global;
+  width: #{275/$font-size}rem;
 }
 
 .loadingContainer {
-  padding: 18px;
-  width: 279px;
+  padding: #{18/$font-size}rem;
+  width: #{279/$font-size}rem;
 }
 
 .resultScreen {
+  composes: u-wordBreakAll from global;
   display: grid;
-  grid-template-columns: 30px 245px;
-  -ms-word-break: break-all;
-  word-break: break-all;
-  min-height: #{$resultGridMinHeight}px;
+  grid-template-columns: #{30/$font-size}rem #{245/$font-size}rem;
 
-   /* Non standard for WebKit */
-  word-break: break-word;
+  min-height: #{20/$font-size}rem;
+
+
   hyphens: auto;
 
   &:last-child {
-    font-size: 13px;
-    line-height: 16px;
+    font-size: #{13/$font-size}rem;
+    line-height: #{16/$font-size}rem;
   }
-}
-
-.resultScreenSingleLine {
-  composes: resultScreen;
-  align-items: center;
-}
-
-.resultScreenMultiLine {
-  composes: resultScreen;
 }
 
 .title {
@@ -64,10 +53,6 @@ $resultGridMinHeight: 20;
 .loadingSpinner {
   composes: u-textCenter from global;
 }
-
-/*.loadingSpinner {
-  composes: u-flex u-posFill u-posAbsolute u-flexAlignItemsCenter u-flexJustifyCenter from global;
-}*/
 
 .loadingSpinnerIE {
   composes: u-paddingBXL u-paddingRXL from global;
