--- a/src/styles/utils.scss
+++ b/src/styles/utils.scss
@@ -492,6 +492,11 @@ u-overflowAuto {
   text-transform: uppercase;
 }
 
+.u-wordBreakAll {
+  word-break: break-all;
+  word-break: break-word; /* Non standard for WebKit */
+}
+
 /**
  * States
  */
