--- a/src/component/chat/ChatPopup.scss
+++ b/src/component/chat/ChatPopup.scss
@@ -1,8 +1,7 @@
 @import '../../styles/_vars.scss';
 
 .containerWrapper {
-  composes: u-hsizeAll u-posAbsolute from global;
-  z-index: 1;
+  composes: u-hsizeAll u-posAbsolute u-zIndex1 from global;
 }
 
 .container {
