--- a/src/styles/utils.scss
+++ b/src/styles/utils.scss
@@ -146,6 +146,10 @@ u-overflowAuto {
   margin-top: $spacing-lrg !important;
 }
 
+.u-marginTN {
+  margin-top: 0 !important;
+}
+
 .u-marginVT {
   margin-top: $spacing-tny !important;
   margin-bottom: $spacing-tny !important;
