Update chat header to pass correct fallback icon to avatar

--- a/src/component/chat/ChatHeader.scss
+++ b/src/component/chat/ChatHeader.scss
@@ -10,6 +10,10 @@
   }
 }
 
+.avatar:not([src]) {
+  border: #{1/$font-size}rem solid $zd-color-iron;
+}
+
 .container {
   composes: u-flex u-flexAlignItemsCenter u-posStart--flush u-posAbsolute u-hsizeAll from global;
   background-color: $base-color;
