Rename sendMsg event handler

--- a/src/component/shared/MessageOptions/MessageOptions.scss
+++ b/src/component/shared/MessageOptions/MessageOptions.scss
@@ -4,9 +4,9 @@
   line-height: #{16/$font-size}rem;
   padding: #{8/$font-size}rem #{12/$font-size}rem;
   transition: background-color 250ms ease-out;
-  border-bottom: #{1/$font-size}rem #f3f3f3 solid;
-  border-left: #{1/$font-size}rem #f3f3f3 solid;
-  border-right: #{1/$font-size}rem #f3f3f3 solid;
+  border-bottom: #{1/$font-size}rem $zd-color-anti-flash-white solid;
+  border-left: #{1/$font-size}rem $zd-color-anti-flash-white solid;
+  border-right: #{1/$font-size}rem $zd-color-anti-flash-white solid;
   max-width: #{219/$font-size}rem;
 
   &:hover {
