Allow dropdown to receive a default node as a prop

--- a/src/component/field/Dropdown.scss
+++ b/src/component/field/Dropdown.scss
@@ -61,6 +61,7 @@ $menu-height: #{200/$font-size}rem;
   padding-bottom: #{8/$font-size}rem !important;
   padding-top: #{8/$font-size}rem !important;
   height: #{18/$font-size}rem;
+  line-height: #{18/$font-size}rem;
 
   &:focus {
     border: $thin-border-size solid $stroke-focused-color;
