Adjust margin-right on error icon to space content

--- a/src/component/submitTicket/SubmitTicket.scss
+++ b/src/component/submitTicket/SubmitTicket.scss
@@ -64,6 +64,7 @@
 
 .errorIcon {
   composes: ErrorIcon from '../../styles/components/Error.scss';
+  margin-right: #{12/$font-size}rem;
 }
 
 .loadingSpinner {
