--- a/src/component/talk/Talk.scss
+++ b/src/component/talk/Talk.scss
@@ -79,8 +79,8 @@
 }
 
 .errorIcon {
-  composes: u-marginRS from global;
   composes: ErrorIcon from '../../styles/components/Error.scss';
+  margin-right: #{12/$font-size}rem;
 }
 
 .offline {
