--- a/src/component/shared/MessageOptions/MessageOptions.scss
+++ b/src/component/shared/MessageOptions/MessageOptions.scss
@@ -14,14 +14,14 @@
     cursor: pointer;
     transition: background-color 250ms ease-in;
   }
+
+  &:last-child {
+    border-bottom-left-radius: #{16/$font-size}rem;
+    border-bottom-right-radius: #{16/$font-size}rem;
+  }
 }
 
 .firstItemBorders {
   border-top-left-radius: #{16/$font-size}rem;
   border-top-right-radius: #{16/$font-size}rem;
-}
-
-.lastItemBorders {
-  border-bottom-left-radius: #{16/$font-size}rem;
-  border-bottom-right-radius: #{16/$font-size}rem;
 }
